# fer-meetings

./: .gitignore  Makefile  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
configs/: ami_av_cnn_vit.json  ami_av_cnn_vit_publication.json  label_map_3class.json  pilot_cnn_vit_template.json  pilot_fast.json  pilot_fast_convnext.json  pilot_fast_resnet.json
data/interim/: ami_av_manifest_publication.csv
docs/: paper_outline.md  paper_progress.md  reproducibility.md
results/ami_av_publication/: README.md  calibrated_test_predictions.csv  clip_labels.csv  confusion_matrices.csv  interrater_agreement.csv  interrater_pairs.csv  labeled_predictions.csv  metrics.csv  metrics.json  per_class_metrics.csv  pr_curves.csv  predictions.csv  roc_curves.csv  scenario_splits.json  summary.md
results/ami_av_publication/annotation_pack/: annotation_sheet.csv  index.html
results/ami_av_publication/clip_models/: attention_pooling_history.csv  clip_model_metrics.csv  (+5 more)
src/fer_meetings/: __init__.py  annotation_pack.py  build_ami_av_manifest.py  build_manifest.py  clip_models.py  config.py  constants.py  evaluate.py  experiment.py  fetch_ami_av_subset.py  fusion.py  github_bundle.py  hf_data.py  interrater.py  label_template.py  labels.py  model.py  paper_assets.py  reporting.py  run_pilot.py  scenario_splits.py  temporal.py  train_clip_models.py  utils.py  video.py
tests/: test_annotation_pack.py  test_clip_models.py  test_config.py  test_fusion.py  test_github_bundle.py  test_labels.py  test_scenario_splits.py  test_temporal.py
(+25 files in other folders)
